--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -46,7 +46,10 @@
                   enctype="multipart/form-data"
                 >
                   <label for="fileToUpload">
-                    <div class="profile-pic">
+                    <div
+                      class="profile-pic"
+                      style="background-image: url(<%=  %>)"
+                    >
                       <span class="profilePicture"></span>
                       <span>Change Image</span>
                     </div>
