--- a/public/css/admin/settings.css
+++ b/public/css/admin/settings.css
@@ -19,6 +19,10 @@ h1 {
 .card-header {
   padding: 15px;
 }
+.button-container{
+  display: flex;
+  justify-content: center;
+}
 .card {
   align-content: center;
   box-shadow: 0 0.15rem 1.75rem 0 rgba(0, 255, 26, 0.15);
