--- a/views/admin/security.ejs
+++ b/views/admin/security.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -11,29 +12,33 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- style sheets  -->
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/admin/security.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
     <title>Security</title>
   </head>
+
   <body>
     <%- include("./nav.ejs") %>
     <main>
       <div class="container-xl px-4 mt-4">
+
         <nav class="nav nav-borders">
           <li><a class="nav-link" href="/admin/settings">Profile</a></li>
           <li><a class="nav-link active" href="#">Security</a></li>
-          <li>
-            <a class="nav-link" href="/admin/notifications">Notifications</a>
-          </li>
+          <li><a class="nav-link" href="/admin/notifications">Notifications</a></li>
         </nav>
+
         <hr class="mt-0 mb-4" />
+        
         <div class="row">
           <div class="containerAll">
             <div class="col-xl-8">
