--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font-awesome -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -11,15 +12,23 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <!-- toastify -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+    <!-- style sheets  -->
     <link rel="stylesheet" href="/css/general.css" />
-    <link rel="stylesheet" href="/css/admin/nav.css" />
     <link rel="stylesheet" href="/css/admin/settings.css" />
+    <link rel="stylesheet" href="/css/admin/nav.css" />
     <title>Admin-Settings</title>
   </head>
 
@@ -35,33 +44,29 @@
           </li>
         </nav>
         <hr class="mt-0 mb-4" />
+        <!-- ------------------------ -->
         <div class="row">
           <div class="col-xl-4">
             <div class="card mb-4 mb-xl-0">
               <div class="card-header">Profile Picture</div>
               <div class="card-body text-center">
-                <form
-                  action="upload.php"
-                  method="post"
-                  enctype="multipart/form-data"
-                >
+                <form method="post" enctype="multipart/form-data">
                   <label for="fileToUpload">
                     <div
                       class="profile-pic"
-                      style="background-image: url(<%=  %>)"
-                    >
-                      <span class="profilePicture"></span>
-                      <span>Change Image</span>
-                    </div>
+                      style="background-image: url(<%=user.profilePic %>)"
+                    ></div>
                   </label>
-                  <input type="File" name="fileToUpload" id="fileToUpload" />
+                  <input type="File" id="fileToUpload" />
                 </form>
                 <div class="small font-italic text-muted mb-4">
                   JPG or PNG no larger than 5 MB
                 </div>
-                <button class="btn btn-primary" type="button">
-                  Upload new image
-                </button>
+                <div class="button-container">
+                  <button class="btn btn-primary" id="upload-new-image">
+                    Upload new image
+                  </button>
+                </div>
               </div>
             </div>
           </div>
@@ -70,53 +75,45 @@
             <div class="card mb-4">
               <div class="card-header">Account Details</div>
               <div class="card-body">
-                <form id="UpdateProfile_Form">
+                <form id="myform">
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
-                      <label class="small mb-1" for="First Name"
+                      <label class="small mb-1" for="firstName"
                         >First name</label
                       >
                       <input
                         class="form-control"
                         id="firstName"
                         type="text"
-                        placeholder="Enter your first name"
+                        value="<%= user.firstName%>"
                       />
-                      <span id="errorFirstname" class="error"></span>
+                      <span id="errorFirstName" class="error"></span>
                     </div>
                     <div class="col-md-6">
-                      <label class="small mb-1" for="Last Name"
-                        >Last name</label
-                      >
+                      <label class="small mb-1" for="lastName">Last name</label>
                       <input
                         class="form-control"
                         id="lastName"
                         type="text"
-                        placeholder="Enter your last name"
+                        value="<%= user.lastName%>"
                       />
-                      <span id="errorlastname" class="error"></span>
+                      <span id="errorLastName" class="error"></span>
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label class="small mb-1" for="Email Address"
-                      >Email address</label
-                    >
+                    <label class="small mb-1" for="email">Email address</label>
                     <input
                       class="form-control"
                       id="email"
-                      type="email"
-                      placeholder="Enter your email address"
+                      type="text"
+                      value="<%= user.email%>"
                     />
+                    <span id="errorEmail" class="error"></span>
                   </div>
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
                       <label class="small mb-1" for="Phone">Phone number</label>
-                      <input
-                        class="form-control"
-                        id="Phone"
-                        type="tel"
-                        placeholder="Enter your phone number"
-                      />
+                      <input class="form-control" id="Phone" type="tel" />
                     </div>
                     <div class="col-md-6">
                       <label class="small mb-1" for="inputBirthday"
@@ -127,12 +124,11 @@
                         id="inputBirthday"
                         type="date"
                         name="birthday"
-                        placeholder="Enter your birthday"
                       />
                     </div>
                   </div>
                   <div class="btns">
-                    <button class="btn btn-primary" type="submit">
+                    <button class="btn btn-primary" id="saveBtn" type="submit">
                       Save changes
                     </button>
                     <button class="btn clear_btn" type="button">Clear</button>
@@ -145,110 +141,130 @@
       </div>
     </main>
 
+    <!-- image upload  -->
     <script>
-      const userName = document.getElementById("Username");
+      document
+        .getElementById("upload-new-image")
+        .addEventListener("click", async (e) => {
+          e.preventDefault();
+
+          try {
+            const res = await fetch("/admin/changeimage", {
+              method: "PUT",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({}),
+            });
+            const data = await res.json();
+
+            console.log(data);
+          } catch (err) {
+            console.log(err);
+          }
+        });
+    </script>
+    <!-- form validation and update data  -->
+    <script>
       const firstName = document.getElementById("firstName");
+      const errorFirstName = document.getElementById("errorFirstName");
+
       const lastName = document.getElementById("lastName");
-      const myForm = document.getElementById("UpdateProfile_Form");
+      const errorLastName = document.getElementById("errorLastName");
+
       const email = document.getElementById("email");
+      const errorEmail = document.getElementById("errorEmail");
 
-      const errorUsername = document.getElementById("errorUsername");
+      const inputBirthday = document.getElementById("inputBirthday");
 
-      function process(e) {
-        e.preventDefault();
+      let foundAnError;
+
+      function getFieldName(input) {
+        let value = input.id;
+        return value.replace(/([a-z])([A-Z])/g, "$1 $2").toLowerCase();
       }
-      //Show input error messages
 
       function showError(input, message) {
-        const formControl = input.parentElement;
-        formControl.className = "form-control error";
-        const span = formControl.querySelector("span");
+        foundAnError = true;
+        const span = input.parentElement.querySelector("span");
+        input.style.border = "1px solid red";
         span.innerText = message;
       }
 
-      //show success color
       function showSucces(input) {
-        const formControl = input.parentElement;
-        console.log(formControl);
-        formControl.className = "form-control success";
+        input.style.border = "1px solid green";
+        const span = (input.parentElement.querySelector("span").innerText = "");
       }
 
-      //check email is valid
-      function checkEmail(input) {
-        const re =
-          /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
-        if (re.test(input.value.trim())) {
-          showSucces(input);
-        } else {
-          showError(input, "Email is not invalid");
-        }
-      }
-
-      //checkRequired fields
       function checkRequired(inputArr) {
         inputArr.forEach(function (input) {
-          if (input.value.trim() === "") {
+          if (input.value.trim() === "")
             showError(input, `${getFieldName(input)} is required`);
-          } else {
-            showSucces(input);
-          }
+          else showSucces(input);
         });
       }
 
-      //check input Length
-      function checkLength(input, min, max) {
-        if (input.value.length < min) {
-          showError(
-            input,
-            `${getFieldName(input)} must be at least ${min} characters`
-          );
-        } else if (input.value.length > max) {
-          showError(
-            input,
-            `${getFieldName(input)} must be less than ${max} characters`
-          );
-        } else {
-          showSucces(input);
-        }
-      }
-
-      //get FieldName
-      function getFieldName(input) {
-        return input.id.charAt(0).toUpperCase() + input.id.slice(1);
-      }
-
-      myForm.addEventListener("submit", async (e) => {
-        e.preventDefault();
-        // checkRequired([userName, email, firstName, lastName]);
-        // checkLength(userName, 4, 15);
-        // checkLength(lastName, 4, 15);
-        // checkEmail(email);
-        // if (userName.value === "" || userName.value == null) {
-        //   errorUsername.innerHTML = "User name is required";
-        // }
-        // if (message.length > 0) {
-        //   errorMessage.innerText = message.join(", ");
-        // }
-        try {
-          const res = await fetch("/admin/settings", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-            },
-            body: JSON.stringify({
-              email: document.getElementById("email").value,
-              firstName: document.getElementById("firstName").value,
-              lastName: document.getElementById("lastName").value,
-            }),
-          });
-          const data = await res.json();
-          if (data.msg) {
-            alert(data.msg);
+      async function checkEmail(input) {
+        const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+        if (!emailRegex.test(input.value.trim()))
+          showError(input, "Email is invalid");
+        else {
+          try {
+            const res = await fetch("/admin/checkemail", {
+              method: "POST",
+              headers: {
+                "Content-Type": "application/json",
+              },
+              body: JSON.stringify({
+                email: document.getElementById("email").value,
+              }),
+            });
+            const data = await res.json();
+            console.log(data);
+            if (data.errMsg) showError(input, "email is taken");
+            else showSucces(input);
+          } catch (err) {
+            console.log(err);
           }
-        } catch (err) {
-          console.log(err);
         }
-      });
+      }
+
+      document
+        .getElementById("saveBtn")
+        .addEventListener("click", async (e) => {
+          e.preventDefault();
+          foundAnError = false;
+          checkRequired([email, firstName, lastName]);
+          checkEmail(email);
+
+          if (!foundAnError) {
+            try {
+              const res = await fetch("/admin/settings", {
+                method: "PUT",
+                headers: {
+                  "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                  email: document.getElementById("email").value,
+                  firstName: document.getElementById("firstName").value,
+                  lastName: document.getElementById("lastName").value,
+                }),
+              });
+              const data = await res.json();
+              if (data.msg) {
+                Toastify({
+                  text: "Updated Successfully",
+                  duration: 3000,
+                  gravity: "top",
+                  close: false,
+                  backgroundColor: "green",
+                }).showToast();
+              }
+            } catch (err) {
+              console.log(err);
+            }
+          }
+        });
     </script>
   </body>
 </html>
