--- a/views/admin/courses.ejs
+++ b/views/admin/courses.ejs
@@ -45,8 +45,9 @@
                 <option data-instructorId="<%= instructor._id %>">
                   <%= instructor.firstName %>
                 </option>
-                <% });} %>
+                <% });} else{%>
                 <option data-instructorId="NULL">No Instructor</option>
+                <%}%>
               </select>
             </div>
             <div>
