--- a/views/instructor/home.ejs
+++ b/views/instructor/home.ejs
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/instructor/home.css" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/instructor/home.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" />
+    <title>Instructor Page</title>
+  </head>
 
-  <script src="https://kit.fontawesome.com/0b0cd0c012.js" crossorigin="anonymous"></script>
-  <title>Instructor Page</title>
-</head>
+  <body>
+    <%- include("./nav.ejs") %>
+    <main>
+      <h1>My Courses</h1>
+      <% if(courses){ %>
+      <section class="courses">
+        <% courses.forEach(course => {%>
+        <div class="course">
+          <img src="<%=course.coverPic %>" alt="course 1" />
+          <p class="name"><%=course.title %></p>
+          <p>Enrolled <%=course.numberOfStudents %> student</p>
+          <p>Go to <a href="/Instructor/<%=course.instructorId %>/course">course</a></p>
+        </div>
+        <% });%>
+      </section>
+      <% } else {%>
+        <p>No Available courses</p>
+        <% } %>
+    </main>
 
-<body>
-  <%- include("./nav.ejs") %>
-  <main>
-    
-  </main>
     <!-- footer  -->
-
     <footer>
       <div class="copywrite">
         <p>Copyright @2023 All rights reserved</p>
@@ -30,6 +39,14 @@
         </div>
       </div>
     </footer>
+
+    <!-- font-awesome  -->
+    <script
+      src="https://kit.fontawesome.com/0b0cd0c012.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- profile-menu -->
     <script>
       let menu = document.getElementById("profileMenu");
 
@@ -45,8 +62,10 @@
           menu.classList.remove("active-list");
         }
       });
+    </script>
 
-      //nav on scroll
+    <!-- nav on scroll -->
+    <script>
       onscroll = () => {
         if (window.scrollY > 5) {
           document.getElementById("nav").classList.add("scroll");
@@ -54,7 +73,10 @@
           document.getElementById("nav").classList.remove("scroll");
         }
       };
-      //search
+    </script>
+
+    <!-- search -->
+    <script>
       const search = document.querySelector(".search");
       const btn = document.querySelector(".btn");
       const input = document.querySelector(".input");
@@ -64,6 +86,6 @@
         input.focus();
       });
     </script>
-</body>
 
+  </body>
 </html>
