added error handeling

--- a/views/registration/forgetpassword.ejs
+++ b/views/registration/forgetpassword.ejs
@@ -102,13 +102,14 @@
             });
             const data = await res.json();
             if (data.errMsg) error.innerHTML = data.errMsg;
+            else if (data.err) location.assign("/error");
             else {
               document.getElementById("emailPart").style.display = "none";
               document.getElementById("otpPart").style.display = "block";
               sendCode();
             }
           } catch (err) {
-            console.log(err);
+            location.assign("/error");
           }
         }
       });
@@ -124,7 +125,7 @@
             body: JSON.stringify({ email }),
           });
         } catch (err) {
-          console.log(err);
+          location.assign("/error");
         }
       }
 
@@ -141,15 +142,12 @@
             body: JSON.stringify({ email, otp }),
           });
           const data = await res.json();
-          if (data.errMsg) {
-            error2.innerHTML = data.errMsg;
-          } else {
-            document.getElementById("otpPart").style.display = "none";
-            document.getElementById("changePasswordPart").style.display =
-              "block";
-          }
+          if (data.errMsg) error2.innerHTML = data.errMsg;
+          else if (data.err) location.assign("/error");
+          else document.getElementById("otpPart").style.display = "none";
+          document.getElementById("changePasswordPart").style.display = "block";
         } catch (err) {
-          console.log(err);
+          location.assign("/error");
         }
       }
 
@@ -222,13 +220,11 @@
               }),
             });
             const data = await res.json();
-            if (data.msg) {
-              location.assign(`/login`);
-            } else {
-              error3.innerHTML = "Somthing went wrong";
-            }
+            if (data.msg) location.assign(`/login`);
+            else if (data.err) location.assign("/error");
+            else error3.innerHTML = "Somthing went wrong";
           } catch (err) {
-            console.log(err);
+            location.assign("/error");
           }
         }
       });
