--- a/views/registration/login.ejs
+++ b/views/registration/login.ejs
@@ -21,7 +21,9 @@
     <main>
       <div class="container">
         <div class="title">
-          <div class="notAllowed"><%=notAllowed ? "You are not allowe to enter the Admin Page" : ""%></div>
+          <div class="notAllowed">
+            <%=notAllowed ? "You are not allowe to enter the Admin Page" : ""%>
+          </div>
           <h1>Welcome back</h1>
           <h2>Log in!</h2>
         </div>
@@ -83,6 +85,7 @@
           const data = await res.json();
 
           if (data.errMsg) error.innerHTML = data.errMsg;
+          else if (data.err) location.assign("/error");
           else if (data.user.role === "admin") location.assign(`/admin`);
           else location.assign(`/${data.user.role}/${data.user._id}`);
         } catch (err) {
